// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation configuration default stack configuration is ok 1`] = `
Object {
  "headerLeft": <withTheme(HeaderLeftComponent)
    icon="arrow-left-1"
    onPress={[Function]}
  />,
  "headerStyle": Object {
    "backgroundColor": "#111111",
    "borderBottomWidth": 0,
  },
  "headerTitleStyle": Object {
    "color": "#FFF",
    "flex": 1,
    "fontSize": 20,
    "letterSpacing": 0.38,
    "lineHeight": 25,
    "opacity": 0.87,
    "textAlign": "center",
  },
}
`;

exports[`Navigation configuration default stack configuration should not display back button if there is nowhere to go back to 1`] = `
Object {
  "headerLeft": false,
  "headerStyle": Object {
    "backgroundColor": "#111111",
    "borderBottomWidth": 0,
  },
  "headerTitleStyle": Object {
    "color": "#FFF",
    "flex": 1,
    "fontSize": 20,
    "letterSpacing": 0.38,
    "lineHeight": 25,
    "opacity": 0.87,
    "textAlign": "center",
  },
}
`;
